Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Jul-2010 Jean-Marie Simonet
 # [#21619] Normalizing menu items sliders to be more explicit over the UI

28-Jul-2010 Ian MacLennan
 # [#21361] Contact Component (Category Contact List-No Query)
 # [#21553] "Add Site Name to Page Titles" does not work in Atom and RSS feeds
 # [#21559] Joomla! Form Field Checkboxes
 # [#21473] Remove garbage output from system test classes
 # [#21521] JSessionStorage*::test() should be static
 # [#21520] JSession::getStores() should be static
 # [#21518] Only variables should be assigned by reference in JCategories->setParent()
 # [#21539] Extraneous edit_params.php in banner view
 # [#21544] The a element in JButtonHelp->fetchButton is not well-formed
 # [#21555] Fields of type=media do not have an obvious way to clear the data
 # [#21602] Preventing saving same alias in same category
 # [#20690] Call to undefined method JRegistry::loadSetupFile()
 # [#21283] System test article0001 failing
 # [#21537] Hathor metadata

28-Jul-2010 Jean-Marie Simonet
 # [#21605] small change in menu manager: new menu item. Thanks Bill.
 # [#21584] Robots metadata useless Option
 # [#21569] article categories - not showing no of articles in each category. Thanks Bill.
 # [#21589] Menu items - link,display and metadata all in one panel slider. Thanks Bill.
 $ Missing string

27-Jul-2010 Ian MacLennan
 # [#21578] mod_articles_popular Ordering Correction
 # [#21547] Make installation work with XHTML parsed as XML

27-Jul-2010 Jean-Marie Simonet
 # [#21159] Using Save as Copy in Categery - no indication is a copy
 # [#21596] Small typo in installer adapters. Thanks Viet.
 # [#21575] Bluestork com_modules module view Clear Float correction. Thanks Omar.
