@@ -7,28 +7,67 @@
 html, body {
 	background-color: #F0F0F0;
 	color: ButtonText;
-	font: 11px Tahoma, Verdana, sans-serif !important;
+	font-family:  Tahoma, Verdana, sans-serif !important;
 	margin: 0px !important; padding: 0px !important;
 }
 
-img      { border: 0 none; }
+img {
+	border: 0 none;
+}
 
-form     { padding: 0px; margin: 0 auto; width: 100%; }
-fieldset {  border-top: 1px solid #CCCCCC; border-bottom: 1px solid #CCCCCC; }
-button   { padding: 3px; border: 1px solid #CCCCCC; font-weight: bold; color: #0B55C4; background-color: white; }
-button:hover { border: 1px solid #0B55C4; }
+form {
+	padding: 0px;
+	margin: 0 auto;
+	width: 100%;
+}
+fieldset {
+	border-top: 1px solid #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
+}
+button {
+	padding: 3px;
+	border: 1px solid #CCCCCC;
+	font-weight: bold;
+	color: #0B55C4;
+	background-color: white;
+}
+button:hover {
+	border: 1px solid #0B55C4;
+}
 
-select,input,button { font: 11px Tahoma, Verdana, sans-serif; }
+select,input,button {
+	font: 11px Tahoma, Verdana, sans-serif;
+}
 
-iframe { width: 100%;  overflow-x: false; border: 0 none;  margin: 0 0 0.5em 0; padding: 0;}
-iframe#imageframe { height: 200px; }
+iframe {
+	width: 100%;
+	overflow-x: false;
+	border: 0 none;
+	margin: 0 0 0.5em 0;
+	padding: 0;
+}
+	
+iframe#imageframe {
+	height: 200px;
+}
 
-a       { padding: 5px; border: 1px solid ButtonFace; }
-a:hover { border-color: ButtonHighlight ButtonShadow ButtonShadow ButtonHighlight; }
+a {
+	padding: 5px;
+	border: 1px solid ButtonFace;
+}
 
-.buttons { width: 70px; text-align: center; }
+a:hover {
+	border-color: ButtonHighlight ButtonShadow ButtonShadow ButtonHighlight;
+}
 
-#f_alt, #f_url, #f_title { width: 22em; }
+.buttons {
+	width: 70px;
+	text-align: center;
+}
+
+#f_alt, #f_url, #f_title {
+	width: 22em;
+}
 
 #messages {
 	position: relative;
@@ -58,9 +97,14 @@ a:hover { border-color: ButtonHighlight ButtonShadow ButtonShadow ButtonHighligh
  */
 
 #upload-flash {
-	font-size: 12px;
+	font-size: 11px;
 	margin-left: 5px;
 }
+
+#upload-flash p {
+	font-size:11px
+}
+
 #upload-flash ul {
 	margin-left: -15px;
 }
@@ -131,17 +175,118 @@ a:hover { border-color: ButtonHighlight ButtonShadow ButtonShadow ButtonHighligh
 	line-height: 18px;
 }
 
+div#upload-flash ul{
+	margin:5px 0 5px 0;
+	overflow:hidden;
+	padding:0
+}
+
 div#upload-flash ul li {
 	float:left;
 	clear:right;
-	margin-left: 10px;
+	margin-right: 10px;
+	list-style-type:none
 }
 
-li a#upload-browse,
-li a#upload-clear,
-li a#upload-start {
+li a#upload-browse:link,
+li a#upload-browse:visited,
+li a#upload-clear:link,
+li a#upload-clear:visited,
+li a#upload-start:link,
+li a#upload-start:visited {
 	display:block;
 	padding: 3px;
 	border: 1px solid #ccc;
 	background-color: #efefef;
+	color:#0B55C4
+}
+li a#upload-browse:hover,
+li a#upload-clear:hover,
+li a#upload-start:hover {
+	display:block;
+	padding: 3px;
+	border: 1px solid #ccc;
+	background: #E8F6FE;
+	color:#333
+}
+
+/* added Angie */
+
+#imageForm fieldset,
+#uploadform,
+#upload-noflash {
+	margin: 0  0 10px 0;
+	border: 1px #ccc solid;
+	padding: 5px !important;
+	text-align: left;
+	font-size:11px
+}
+#upload-noflash {
+		border:0
+}
+.fltrt {
+	float: right;
+}
+
+.fltlft {
+	float: left;
+}
+
+table.properties,
+table.properties tr,
+table.properties td {
+	border:0;
+}
+
+
+.properties label {
+	color:#000;
+	padding:0 4px
+}
+
+legend {
+    color: #146295;
+    font-size: 1.2em;
+    font-weight: bold;
+    font-size:11px
+}
+
+#uploadform legend
+{
+	font-size:12px;
+	color:#0B55C4
+}
+
+
+input, select {
+    font-size: 0.909em;
+    border: 1px solid silver;
+    background: #fff;
+}
+
+
+.hide {
+	display:none
+}
+
+fieldset input,
+fieldset textarea,
+fieldset select,
+fieldset img,
+fieldset button {
+    float: left;
+    width: auto;
+    margin: 5px 5px 5px 0px;
+}
+
+ label.hidelabeltxt {
+	text-indent: -9999em;
+}
+#imageForm fieldset label,
+#uploadform fieldset label {
+    float: left;
+    clear: left;
+    display:block;
+    margin: 5px 0;
+    font-size:11px
 }
